@@ -21,7 +21,6 @@ import cd.go.contrib.elasticagent.requests.JobCompletionRequest;
 import com.thoughtworks.go.plugin.api.response.DefaultGoPluginApiResponse;
 import com.thoughtworks.go.plugin.api.response.GoPluginApiResponse;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static cd.go.contrib.elasticagent.KubernetesPlugin.LOG;
@@ -39,7 +38,7 @@ public class JobCompletionRequestExecutor implements RequestExecutor {
     }
 
     @Override
-    public GoPluginApiResponse execute() throws Exception {
+    public GoPluginApiResponse execute() {
         ClusterProfileProperties clusterProfileProperties = jobCompletionRequest.clusterProfileProperties();
 
         String elasticAgentId = jobCompletionRequest.getElasticAgentId();
@@ -49,7 +48,7 @@ public class JobCompletionRequestExecutor implements RequestExecutor {
 
         LOG.info(format("[Job Completion] Terminating elastic agent with id {0} on job completion {1}.", agent.elasticAgentId(), jobCompletionRequest.jobIdentifier()));
 
-        List<Agent> agents = Arrays.asList(agent);
+        List<Agent> agents = List.of(agent);
         pluginRequest.disableAgents(agents);
         agentInstances.terminate(agent.elasticAgentId(), clusterProfileProperties);
         pluginRequest.deleteAgents(agents);
