@@ -23,8 +23,8 @@ import org.json.JSONException;
 import org.junit.jupiter.api.Test;
 import org.skyscreamer.jsonassert.JSONAssert;
 
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -81,8 +81,8 @@ public class MigrateConfigurationRequestTest {
         elasticAgentProfile.setProperties(properties);
 
         assertThat(pluginSettings).isEqualTo(request.getPluginSettings());
-        assertThat(Arrays.asList(clusterProfile)).isEqualTo(request.getClusterProfiles());
-        assertThat(Arrays.asList(elasticAgentProfile)).isEqualTo(request.getElasticAgentProfiles());
+        assertThat(List.of(clusterProfile)).isEqualTo(request.getClusterProfiles());
+        assertThat(List.of(elasticAgentProfile)).isEqualTo(request.getElasticAgentProfiles());
     }
 
     @Test
@@ -96,8 +96,8 @@ public class MigrateConfigurationRequestTest {
         MigrateConfigurationRequest request = MigrateConfigurationRequest.fromJSON(requestBody);
 
         assertThat(new PluginSettings()).isEqualTo(request.getPluginSettings());
-        assertThat(Arrays.asList()).isEqualTo(request.getClusterProfiles());
-        assertThat(Arrays.asList()).isEqualTo(request.getElasticAgentProfiles());
+        assertThat(List.of()).isEqualTo(request.getClusterProfiles());
+        assertThat(List.of()).isEqualTo(request.getElasticAgentProfiles());
     }
 
     @Test
@@ -118,7 +118,7 @@ public class MigrateConfigurationRequestTest {
         properties.put("some_key2", "some_value2");
         elasticAgentProfile.setProperties(properties);
 
-        MigrateConfigurationRequest request = new MigrateConfigurationRequest(pluginSettings, Arrays.asList(clusterProfile), Arrays.asList(elasticAgentProfile));
+        MigrateConfigurationRequest request = new MigrateConfigurationRequest(pluginSettings, List.of(clusterProfile), List.of(elasticAgentProfile));
 
         String actual = request.toJSON();
 
